--- a/modele.ipynb
+++ b/modele.ipynb
@@ -1308,6 +1308,8 @@
     "\n",
     "Pour les variables de contrôle, il faut sûrement tester lesquelles sont les meilleures, ne pas forcément reproduire exactement le modèle.\n",
     "\n",
+    "On a des données trimestrielles donc on prend h de 0 à 4 ou 8\n",
+    "\n",
     "\n"
    ]
   },
